<resources>
    <string name="app_name" translatable="false">Selection Dialog Example</string>
    <string name="example_selection_1" translatable="false">Best F1 driver of all time</string>
    <string name="example_selection_2" translatable="false">Example selection enum</string>
    <string name="example_selection_3" translatable="false">Example multiple selection enum</string>
    <string name="example_multiple_selection_1" translatable="false">Favorite F1 drivers</string>
    <string name="example_single_launch" translatable="false">Launch dialog (single)</string>
    <string name="example_multiple_launch" translatable="false">Launch dialog (multiple)</string>
    <string name="string_res_example_online" translatable="false">Online</string>
    <string name="string_res_example_offline" translatable="false">Offline</string>
    <string name="string_res_example_idle" translatable="false">Idle</string>
    <string name="string_res_example_invisible" translatable="false">Invisible</string>
</resources>